metadata/force-app/main/default/objects/CustomName_IjfOE__c/CustomName_IjfOE__c.object-meta.xml
<CustomObject>
    <description>Description_evYIr</description>
    <label>CustomLabel_TjDBi</label>
    <nameField>
        <label>CustomLabel_TjDBi</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_TjDBis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>