metadata/force-app/main/default/objects/CustomName_IjfOE__c/fields/CustomField_iTEgT__c.field-meta.xml
<CustomField>
    <fullName>CustomField_iTEgT__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldmHbjM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>